--- a/notebooks/hier_forecast_lgbm.ipynb
+++ b/notebooks/hier_forecast_lgbm.ipynb
@@ -28,33 +28,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-28 14:35:34,004 - INFO - Config carregado de c:\\Users\\eduar\\Documents\\usp\\AMST\\ml_timeseries_usp\\config.yaml\n",
-      "2025-11-28 14:35:34,057 - INFO - Config carregado de c:\\Users\\eduar\\Documents\\usp\\AMST\\ml_timeseries_usp\\config.yaml\n"
+      "2025-11-30 11:50:01,754 - INFO - Config carregado de c:\\Users\\eduar\\Documents\\usp\\AMST\\ml_timeseries_usp\\config.yaml\n",
+      "2025-11-30 11:50:01,801 - INFO - Config carregado de c:\\Users\\eduar\\Documents\\usp\\AMST\\ml_timeseries_usp\\config.yaml\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtrando nível: ['total', 'centro_distribuicao'] (>= 42 obs)\n",
-      "   → 3 combinações → 3 mantidas (100.0%)\n",
-      "Filtrando nível: ['total'] (>= 42 obs)\n",
-      "   → 1 combinações → 1 mantidas (100.0%)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-11-28 14:36:32,835 - INFO - Agregação hierárquica concluída.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tags salvo com joblib → 100% fiel ao original\n",
-      "Tamanho: 0.4 KB\n",
+      "loading data...\n",
       "Train: 2022-01-01 → 2025-01-01 (37 meses)\n",
       "Test (backtest): 2025-02-01 → 2025-07-01 (6 meses)\n"
      ]
@@ -71,14 +53,23 @@
     "\n",
     "config = load_config()\n",
     "\n",
-    "df = DatasetCreator(config).run()\n",
-    "\n",
-    "if config['exogen_features'] == 'true':\n",
-    "    df = FeaturesBuilder(df,config).run()\n",
-    "else:\n",
+    "if config['cache']:\n",
+    "    print('loading data...')\n",
+    "    df = DatasetCreator(config).load_intermediary()\n",
+    "    Hagg = DatasetHierarchicalAggregator(config,df)\n",
+    "    Y_df = Hagg.load_processed(filename='dataset.parquet')\n",
+    "    S_df = Hagg.load_processed(filename='structure.parquet')\n",
+    "    S_df = Hagg.load_tags(filename='tags.joblib')\n",
     "    pass\n",
+    "else:\n",
+    "    df = DatasetCreator(config).run() \n",
     "\n",
-    "Y_df,S_df,tags = DatasetHierarchicalAggregator(config,df).run()\n",
+    "    if config['exogen_features'] == 'true':\n",
+    "        df = FeaturesBuilder(df,config).run()\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "    Y_df,S_df,tags = DatasetHierarchicalAggregator(config,df).run()\n",
     "\n",
     "train,test = hierarchical_train_test_split(Y_df)"
    ]
